// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the component if no mouseover event on child 1`] = `
.emotion-0 > button[disabled] {
  pointer-events: none;
}

<span
  class="emotion-0"
>
  <span>
    Hover me
  </span>
</span>
`;

exports[`renders the component 1`] = `
.emotion-0 > button[disabled] {
  pointer-events: none;
}

<span
  class="emotion-0"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component as span with a id attribute 1`] = `
.emotion-0 > button[disabled] {
  pointer-events: none;
}

<span
  class="emotion-0"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with a id attribute 1`] = `
.emotion-0 > button[disabled] {
  pointer-events: none;
}

<span
  class="emotion-0"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with a place attribute 1`] = `
.emotion-0 > button[disabled] {
  pointer-events: none;
}

<span
  class="emotion-0"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with a target wrapper classname 1`] = `
.emotion-0 > button[disabled] {
  pointer-events: none;
}

<span
  class="emotion-0 target-wrapper-class-name"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 > button[disabled] {
  pointer-events: none;
}

<span
  class="emotion-0"
>
  <span
    id="test"
  >
    Hover me
  </span>
</span>
`;
